--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "nodemon server.js",
     "lint": "next lint"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts": "^4.9.2",
     "axios": "^0.27.2",
+    "dotenv": "^16.3.1",
     "ether": "^0.0.9",
     "framer-motion": "^7.2.1",
-    "ipfs-http-client": "^58.0.0",
+    "ipfs-http-client": "^58.0.1",
+    "mongoose": "^7.3.2",
     "next": "12.2.5",
+    "nodemon": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
+    "web3": "^4.0.3",
     "web3modal": "^1.9.9"
   },
   "devDependencies": {
@@ -34,7 +38,7 @@
     "chai": "^4.2.0",
     "hardhat": "^2.16.1",
     "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.1",
+    "solidity-coverage": "^0.8.4",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^5.1.6"
