--- a/package.json
+++ b/package.json
@@ -42,5 +42,12 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^5.1.6"
-  }
+  },
+  "description": "The auctioning website provides a platform for users to effortlessly upload their unique and valuable Non-Fungible Tokens (NFTs), which are digital assets with exclusive properties. These NFTs can then be put up for auction, enabling potential buyers to acquire them using cryptocurrencies as a medium of exchange. The underlying infrastructure of the website operates on a smart contract, which securely stores and manages all the relevant data. This intelligent contract not only ensures the integrity and transparency of the auctioning process but also facilitates seamless monitoring and oversight. This pioneering project is designed to embrace the decentralized nature of blockchain technology, offering a mode of auctioning that is independent of any central authority. By adopting a decentralized approach, the platform enables users to engage in the auctioning of their digital products in a manner that aligns with the emerging trends and advancements within the blockchain realm.",
+  "main": "hardhat.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "author": "",
+  "license": "ISC"
 }
